Disable not needed shields

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/zentala/open-smart-desk">
 
           <!-- https://shields.io/badges/git-hub-watchers -->
-          <img alt="GitHub watchers" src="https://img.shields.io/github/watchers/zentala/open-smart-desk">
+          <!-- <img alt="GitHub watchers" src="https://img.shields.io/github/watchers/zentala/open-smart-desk"> -->
 
           <!-- https://shields.io/badges/git-hub-forks -->
-          <img alt="GitHub forks" src="https://img.shields.io/github/forks/zentala/open-smart-desk">
+          <!-- <img alt="GitHub forks" src="https://img.shields.io/github/forks/zentala/open-smart-desk"> -->
 
           <!-- https://shields.io/badges/git-hub -->
           <img alt="GitHub" src="https://img.shields.io/github/license/zentala/open-smart-desk">
