fix: center figure of web panel

--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
           </figure>
         </div>
         <div class="col">
-          <figure class="figure">
-            <img src="images/20230628_043425.jpg" class="figure-img img-fluid rounded" alt="User Panel">
-            <!-- <figcaption class="figure-caption">A caption for the above image.</figcaption> -->
-          </figure>
+            <figure class="figure">
+              <img src="images/20230628_043425.jpg" class="figure-img img-fluid rounded" alt="User Panel">
+              <!-- <figcaption class="figure-caption">A caption for the above image.</figcaption> -->
+            </figure>
         </div>
       </div>
       <p>Netherless I have planned to use:</p>
@@ -347,10 +347,12 @@
     <section class="container py-2">
       <h2>Software</h2>
       <p>I conducted experiments using both <a href="https://github.com/zentala/open-smart-desk">Node.js</a> (more extensive version) and <a href="https://github.com/zentala/open-smart-desk-python-experiment">Python</a>. While working with Python, I encountered some serious threading issues that I wasn't qualified to solve, so I decided to abandon this approach. In the Node.js version, I ended up with a web interface that replicates the physical controller. It processes data from the laser meter and can switch relays.</p>
-      <figure class="figure">
-        <img src="images/web.png" class="figure-img img-fluid rounded" alt="Web interface of Open Smart Desk">
-        <figcaption class="figure-caption text-center">Web interface of Open Smart Desk</figcaption>
-      </figure>
+      <div class="text-center">
+        <figure class="figure">
+          <img src="images/web.png" class="figure-img img-fluid rounded" alt="Web interface of Open Smart Desk">
+          <figcaption class="figure-caption text-center">Web interface of Open Smart Desk</figcaption>
+        </figure>
+      </div>
     </section>
     <section class="container py-2">
       <h2>Goals and Challenges</h2>
