Slightly improved design

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="Open Smart Desk, Height Adjustable Desk, Smart Desk, Health, Posture, Sedentary Lifestyle, Standing Desk, Ergonomics">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div class="jumbotron jumbotron-fluid text-center" style="background-color: #f8f9fa; border-bottom: 1px solid #eee;">
@@ -50,20 +51,22 @@
     </div>
     </div>
   </div>
-  
+
   <main class="container my-5">
-    <section class="container py-2">
+    <section class="container my-5 wrapper">
       <h2>Mission</h2>
-      <h3>Addressing Sedentary Lifestyle - A Health Imperative</h3>
-      <p>In the modern world, an increasing number of people are working remotely, spending their work hours in front of a computer. After work, they continue to use computers for shopping, handling administrative matters, and entertainment. Many of us, especially during the COVID-19 pandemic, have experienced spending the entire day in front of a screen, from the moment we wake up until we go to bed. This lifestyle, if unchecked, can lead to health issues.</p>
-      <p>A sedentary lifestyle can lead to serious health problems, including spinal and joint diseases, resulting in mobility issues. These civilization diseases not only generate significant costs for the global economy but also cause tremendous inconvenience for those affected.</p>
-      <p>Height-adjustable desks were theoretically designed to combat the sedentary lifestyle. However, in practice, many of us don't utilize them to their full potential. We often forget or lack the motivation to change positions, enduring the discomfort that comes with it. This realization inspired the idea for the Open Smart Desk.</p>
-      <p>This project was initiated to change that. The goal is to develop smart features that monitor our presence and desk height, in order to motivate us to lead a healthier lifestyle. This is intended to achieved through a gamification system that makes the process engaging and fun.</p>
-      <p>The dream is to create a communication and control system for the desk that makes daily position changes in front of the computer a pleasant, natural, and non-invasive experience. The hope is that one day, the solutions developed here will become widespread worldwide, helping to ward off the specter of civilization diseases for millions of intellectual workers.</p>
-      <!-- <h2>Mission</h2> -->
-      <!-- <h3>Preventing Health Problems Associated with Sedentary Lifestyle</h3> -->
-      <!-- <p>A sedentary lifestyle can lead to serious health problems, such as spinal and joint diseases, which can result in mobility issues. These are civilization diseases that can generate significant costs for the global economy and cause tremendous inconvenience for those affected by these problems. This project is an attempt to take on the challenge and find a solution to this problem. </p> -->
-      <!-- <p>Theoretically, height-adjustable desks were designed to address the problem of a sedentary lifestyle. However, in practice, most of us don't use them - we forget or lack the motivation to endure the discomfort of changing positions. I initiated this project to develop smart features that will monitor our posture and motivate us to lead a healthier lifestyle through a gamification system. I dream of creating a communication and control system for the desk that makes daily position changes in front of the computer pleasant, natural, and non-invasive. I hope that one day the solutions developed here will become widespread worldwide, warding off the specter of civilization diseases for millions of intellectual workers.</p> -->
+      <div class="content c3">
+        <h3>A Health Imperative: Addressing Sedentary Lifestyle</h3>
+        <p>In the modern world, an increasing number of people are working remotely, spending their work hours in front of a computer. After work, they continue to use computers for shopping, handling administrative matters, and entertainment. Many of us, especially during the COVID-19 pandemic, have experienced spending the entire day in front of a screen, from the moment we wake up until we go to bed. This lifestyle, if unchecked, can lead to health issues.</p>
+        <p>A sedentary lifestyle can lead to serious health problems, including spinal and joint diseases, resulting in mobility issues. These civilization diseases not only generate significant costs for the global economy but also cause tremendous inconvenience for those affected.</p>
+        <p>Height-adjustable desks were theoretically designed to combat the sedentary lifestyle. However, in practice, many of us don't utilize them to their full potential. We often forget or lack the motivation to change positions, enduring the discomfort that comes with it. This realization inspired the idea for the Open Smart Desk.</p>
+        <p>This project was initiated to change that. The goal is to develop smart features that monitor our presence and desk height, in order to motivate us to lead a healthier lifestyle. This is intended to achieved through a gamification system that makes the process engaging and fun.</p>
+        <p>The dream is to create a communication and control system for the desk that makes daily position changes in front of the computer a pleasant, natural, and non-invasive experience. The hope is that one day, the solutions developed here will become widespread worldwide, helping to ward off the specter of civilization diseases for millions of intellectual workers.</p>
+        <!-- <h2>Mission</h2> -->
+        <!-- <h3>Preventing Health Problems Associated with Sedentary Lifestyle</h3> -->
+        <!-- <p>A sedentary lifestyle can lead to serious health problems, such as spinal and joint diseases, which can result in mobility issues. These are civilization diseases that can generate significant costs for the global economy and cause tremendous inconvenience for those affected by these problems. This project is an attempt to take on the challenge and find a solution to this problem. </p> -->
+        <!-- <p>Theoretically, height-adjustable desks were designed to address the problem of a sedentary lifestyle. However, in practice, most of us don't use them - we forget or lack the motivation to endure the discomfort of changing positions. I initiated this project to develop smart features that will monitor our posture and motivate us to lead a healthier lifestyle through a gamification system. I dream of creating a communication and control system for the desk that makes daily position changes in front of the computer pleasant, natural, and non-invasive. I hope that one day the solutions developed here will become widespread worldwide, warding off the specter of civilization diseases for millions of intellectual workers.</p> -->
+      </div>
     </section>
     <section class="container py-2">
       <h2>Hardware</h2>
@@ -109,7 +112,7 @@
                     <p class="card-text"></p>
                     <a href="https://www.waveshare.com/rpi-relay-board.htm" class="btn btn-primary stretched-link" target="_blank">Buy <span class="badge text-bg-secondary">US$16</span></a>
                   </div>
-                </div>    
+                </div>
               </div>
 
               <div class="col-sm-6 col-md-4 col-lg-3">
@@ -261,7 +264,7 @@
               <!-- <li>microSD card 32GB</li> -->
               <li>plexi laser cutted enclousre: <a href="enclosure/v1/plexi_5mm_40x20cm.dxf">plexi_5mm_40x20cm.dxf</a> & <a href="enclosure/v1/plexi_smoked_graphite_3mm_9x13.5cm.dxf">plexi_dymiona_grafit_3mm_9x13.5cm.dxf</a></li>
             </ul>
-            
+
           </div>
         <!-- </div> -->
       </div>
@@ -321,7 +324,7 @@
       </div>
       <p>In next version I plan to replace PRi4 with RPi0. I am just not sure if VS Studio SSH Remote will support it.</p>
       <h3>User Panel</h3>
-      <p>I have never finished this component. Elements doesn't fit enclosure - not enough space to connect electronic components together. PCB and 3D printed enclosure are required remodeling.</p>      
+      <p>I have never finished this component. Elements doesn't fit enclosure - not enough space to connect electronic components together. PCB and 3D printed enclosure are required remodeling.</p>
       <div class="row">
         <div class="col">
           <figure class="figure">
@@ -354,42 +357,58 @@
         </figure>
       </div>
     </section>
-    <section class="container py-2">
-      <h2>Goals and Challenges</h2>
-      <div class="row">
-        <div class="col">
-          <h3>Creating a Seamless and Engaging User Experience</h3>
-          <p>A crucial part of the research process is to develop a way of encouraging the user to take a break or work standing up that won't be irritating or distracting during meetings. In order to create a seamless experience, it's important to gather information about users, their needs, and preferences, as well as to collect various ideas on how to approach this challenge from the community. The goal is to make the intelligent desk feel like an extension of the user, much like a driver feels their car.</p>
-        </div>
-        <div class="col">
-          <h3>Building a Community & Ship in on the market</h3>
-          <p>We aim to build a business model that allows us to integrate our IoT solution with already existing desks in the market. We don't intend to compete with desk manufacturers, but rather to be a supplier of an IoT solution that can be integrated with existing market solutions. At the same time, we need funding to develop the product so that it's intuitive and ergonomic, and can be widely adopted to help people. How can we achieve this?</p>  
+    <section class="container wrapper mb-5">
+      <h2>Goals & Challenges</h2>
+      <div class="content">
+        <div class="row">
+          <div class="col">
+            <h3>Seamless and Engaging User Experience</h3>
+            <p>A crucial part of the research process is to develop a way of encouraging the user to take a break or work standing up that won't be irritating or distracting during meetings. In order to create a seamless experience, it's important to gather information about users, their needs, and preferences, as well as to collect various ideas on how to approach this challenge from the community. The goal is to make the intelligent desk feel like an extension of the user, much like a driver feels their car.</p>
+          </div>
+          <div class="col">
+            <h3>Shipping in on the market</h3>
+            <p>We aim to build a business model that allows us to integrate our IoT solution with already existing desks in the market. We don't intend to compete with desk manufacturers, but rather to be a supplier of an IoT solution that can be integrated with existing market solutions. At the same time, we need funding to develop the product so that it's intuitive and ergonomic, and can be widely adopted to help people. How can we achieve this?</p>
+          </div>
         </div>
       </div>
     </section>
-    <section class="container py-2">
+
+    <section class="container wrapper mb-5">
       <h2>Licensing</h2>
-      <p><strong>Open Smart Desk</strong> is an <strong>Open HSP</strong> initiative where everything is open on <a href="https://github.com/zentala/open-smart-desk/blob/master/LICENSE.md" target="_blank">GPL-3.0 License</a>:</p>
-      <ul>
-        <li><strong>H</strong> (Hardware) stands for projects of electronic boards which you can print yourself</li>
-        <li><strong>S</strong> (Software) stands for ready to use firmware you can use on printed hardware</li>
-        <li><strong>P</strong> (Printables) stands for cases and other plastic elements you can print on a 3D printer and use with our hardware</li>
-      </ul>
-      <p>With all elements in place, you can assemble a complete device. You can use it as-is or fork and modify it for your needs.</p>
+      <div class="content">
+        <div class="h3">Open HSP</div>
+        <p><strong>Open Smart Desk</strong> is an <strong>Open HSP</strong> initiative where everything is open on <a href="https://github.com/zentala/open-smart-desk/blob/master/LICENSE.md" target="_blank">GPL-3.0 License</a>:</p>
+        <ul>
+          <li><strong>H</strong> (Hardware) stands for projects of electronic boards which you can print yourself</li>
+          <li><strong>S</strong> (Software) stands for ready to use firmware you can use on printed hardware</li>
+          <li><strong>P</strong> (Printables) stands for cases and other plastic elements you can print on a 3D printer and use with our hardware</li>
+        </ul>
+        <p>With all elements in place, you can assemble a complete device. You can use it as-is or fork and modify it for your needs.</p>
+      </div>
     </section>
-    <section class="container py-2">
+
+    <section class="container wrapper">
       <h2>Join us!</h2>
-      <h3>Become a Part of the Working Group!</h3>
-      <p>
-        For now I have only built a prototype of the device that measures time, 
-        controls the motors, and has a physical interface (buttons and display). 
-        But it isn't finshed and still requires a lot of experiments, ideas, developement and improvements. 
-      </p>
-      <p class="lead text-center">Join Discord working group<br/>and become part of this journey:</p>
-      <div class="text-center">
-        <a href="https://discord.com/invite/7s7P9Kga" class="btn btn-primary btn-lg btn-lg m-2" role="button" style="background: #5865f2;">
-          <i class="bi bi-discord"  style="position: relative; top: -1px"></i> Discord
-        </a> 
+      <div class="content">
+        <div class="row">
+          <div class="col-md-8">
+            <h3>Become a Part of the Working Group!</h3>
+            <p>
+              For now I have only built a prototype of the device that measures time,
+              controls the motors, and has a physical interface (buttons and display).
+              But it isn't finshed and still requires a lot of experiments, ideas, developement and improvements.
+            </p>
+          </div>
+          <div class="col-md-2 offset-md-2">
+            <!--<p class="lead">Join Discord working group<br/>and become part of this journey:</p>-->
+            <div class="">
+              <a href="https://discord.com/invite/7s7P9Kga" class="btn btn-primary btn-lg btn-lg mt-3" role="button" style="background: #5865f2; scale: 180%">
+                <i class="bi bi-discord"  style="position: relative; top: -1px"></i> Discord
+              </a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
@@ -402,7 +421,7 @@
       <div class="vr"></div>
       <p class="mb-0" style="font-size: 0.85rem;">
         <a class="icon-link" href="https://github.com/zentala/desk.zentala.io/blob/master/index.html" target="_blank">
-          <i class="bi bi-github" style="position: relative; top: -3px"></i>Edit this page 
+          <i class="bi bi-github" style="position: relative; top: -3px"></i>Edit this page
         </a>
       </p>
     </div>
@@ -410,7 +429,7 @@
 
   <!-- JS for Bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-  
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-BZ6M9DBGYJ"></script>
   <script>
